--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="Title/Carousel.png" />
     <link rel="stylesheet" href="style.css" />
-    <title>Styled Page</title>
+    <title>CSS & Javascript Carousel</title>
   </head>
   <body>
     <div class="container">
