--- a/index.html
+++ b/index.html
@@ -66,59 +66,79 @@
     </div>
 
     <script>
-      const carousel = document.querySelector(".carousel");
-      const leftBtn = document.querySelector(".left-btn");
-      const rightBtn = document.querySelector(".right-btn");
-      const dotsContainer = document.querySelector(".carousel-dots");
-      const cards = document.querySelectorAll(".Card");
+const carousel = document.querySelector(".carousel");
+const leftBtn = document.querySelector(".left-btn");
+const rightBtn = document.querySelector(".right-btn");
+const dotsContainer = document.querySelector(".carousel-dots");
+const cards = document.querySelectorAll(".Card");
 
-      // Create dots
-      cards.forEach((_, index) => {
-        const dot = document.createElement("span");
-        dot.classList.add("dot");
-        if (index === 0) dot.classList.add("active");
-        dot.addEventListener("click", () => {
-          cards[index].scrollIntoView({
-            behavior: "smooth",
-            inline: "start",
-            block: "nearest",
-          });
-        });
-        dotsContainer.appendChild(dot);
-      });
+// 1. Create dots - exactly one per card
+dotsContainer.innerHTML = ''; // Clear existing to prevent duplicates
+cards.forEach((_, index) => {
+  const dot = document.createElement("span");
+  dot.classList.add("dot");
+  if (index === 0) dot.classList.add("active");
+  dot.addEventListener("click", () => {
+    cards[index].scrollIntoView({
+      behavior: "smooth",
+      inline: "center",
+      block: "nearest"
+    });
+  });
+  dotsContainer.appendChild(dot);
+});
 
-      const dots = document.querySelectorAll(".dot");
+const dots = document.querySelectorAll(".dot");
 
-      function updateButtons() {
-        // Disable left button if at the start
-        leftBtn.disabled = carousel.scrollLeft <= 0;
+// 2. Improved Dot Update Logic
+function updateDots() {
+  const carouselRect = carousel.getBoundingClientRect();
+  const carouselCenter = carouselRect.left + carouselRect.width / 2;
 
-        // Disable right button if at the end
-        rightBtn.disabled =
-          carousel.scrollLeft >=
-          carousel.scrollWidth - carousel.clientWidth - 1;
+  let closestIndex = 0;
+  let minDistance = Infinity;
 
-        // Update active dot
-        const cardWidth = cards[0].offsetWidth + 16; // card width + gap
-        const activeIndex = Math.round(carousel.scrollLeft / cardWidth);
-        dots.forEach((dot, index) => {
-          dot.classList.toggle("active", index === activeIndex);
-        });
-      }
+  cards.forEach((card, index) => {
+    const cardRect = card.getBoundingClientRect();
+    const cardCenter = cardRect.left + cardRect.width / 2;
+    const distance = Math.abs(carouselCenter - cardCenter);
 
-      // Check button states on scroll
-      carousel.addEventListener("scroll", updateButtons);
+    if (distance < minDistance) {
+      minDistance = distance;
+      closestIndex = index;
+    }
+  });
 
-      // Initial check
-      updateButtons();
+  dots.forEach((dot, index) => {
+    dot.classList.toggle("active", index === closestIndex);
+  });
+}
 
-      leftBtn.addEventListener("click", () => {
-        carousel.scrollBy({ left: -350, behavior: "smooth" });
-      });
+carousel.addEventListener("scroll", updateDots);
 
-      rightBtn.addEventListener("click", () => {
-        carousel.scrollBy({ left: 350, behavior: "smooth" });
-      });
+// 3. Update button states
+function updateButtons() {
+  const maxScroll = carousel.scrollWidth - carousel.clientWidth;
+  leftBtn.disabled = carousel.scrollLeft <= 5;
+  rightBtn.disabled = carousel.scrollLeft >= maxScroll - 5;
+}
+
+carousel.addEventListener("scroll", updateButtons);
+updateButtons();
+
+// 4. Navigation Buttons
+const scrollNext = (direction) => {
+  const cardWidth = cards[0].offsetWidth + 24; // Card + Gap
+  
+  if (direction === 'right') {
+    carousel.scrollBy({ left: cardWidth, behavior: "smooth" });
+  } else {
+    carousel.scrollBy({ left: -cardWidth, behavior: "smooth" });
+  }
+};
+
+rightBtn.addEventListener("click", () => scrollNext('right'));
+leftBtn.addEventListener("click", () => scrollNext('left'));
     </script>
   </body>
 </html>
