--- a/index.html
+++ b/index.html
@@ -92,22 +92,36 @@ const dots = document.querySelectorAll(".dot");
 
 // 2. Improved Dot Update Logic
 function updateDots() {
-  const carouselRect = carousel.getBoundingClientRect();
-  const carouselCenter = carouselRect.left + carouselRect.width / 2;
-
+  const scrollLeft = carousel.scrollLeft;
+  const maxScroll = carousel.scrollWidth - carousel.clientWidth;
+  
   let closestIndex = 0;
-  let minDistance = Infinity;
 
-  cards.forEach((card, index) => {
-    const cardRect = card.getBoundingClientRect();
-    const cardCenter = cardRect.left + cardRect.width / 2;
-    const distance = Math.abs(carouselCenter - cardCenter);
+  // Edge case: Start of carousel -> First dot
+  if (scrollLeft <= 10) {
+    closestIndex = 0;
+  } 
+  // Edge case: End of carousel -> Last dot
+  else if (scrollLeft >= maxScroll - 10) {
+    closestIndex = cards.length - 1;
+  } 
+  // Middle: Center-based detection
+  else {
+    const carouselRect = carousel.getBoundingClientRect();
+    const carouselCenter = carouselRect.left + carouselRect.width / 2;
+    let minDistance = Infinity;
 
-    if (distance < minDistance) {
-      minDistance = distance;
-      closestIndex = index;
-    }
-  });
+    cards.forEach((card, index) => {
+      const cardRect = card.getBoundingClientRect();
+      const cardCenter = cardRect.left + cardRect.width / 2;
+      const distance = Math.abs(carouselCenter - cardCenter);
+
+      if (distance < minDistance) {
+        minDistance = distance;
+        closestIndex = index;
+      }
+    });
+  }
 
   dots.forEach((dot, index) => {
     dot.classList.toggle("active", index === closestIndex);
@@ -139,6 +153,12 @@ const scrollNext = (direction) => {
 
 rightBtn.addEventListener("click", () => scrollNext('right'));
 leftBtn.addEventListener("click", () => scrollNext('left'));
+
+// 5. Keyboard Navigation
+document.addEventListener('keydown', (e) => {
+  if (e.key === 'ArrowLeft') scrollNext('left');
+  if (e.key === 'ArrowRight') scrollNext('right');
+});
     </script>
   </body>
 </html>
